--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -2,8 +2,8 @@
   <div class="container">
     <nav class="navbar navbar-light">
       <a class="navbar-light text-white">Techpit Match</a>
-      <div class="navbar_sign-in-btn">
-        <%= link_to "ログイン", "#", class: "btn my-2 my-sm-0 bg-light text-top-color" %>
+      <div class="navbar__sign-in-btn">
+        <%= link_to "ログイン", new_user_session_path, class: "btn my-2 my-sm-0 bg-light text-top-color" %>
       </div>
     </nav>
   </div>
@@ -16,10 +16,10 @@
 
   <div class="top-authentication text-center">
     <div class="top-authentication__sign-up-btn m-3">
-      <%= link_to "アカウントを作成する", "#", class: "btn text-white" %>
+      <%= link_to "アカウントを作成する", new_user_registration_path, class: "btn text-white" %>
     </div>
     <div class="top-authentication__sign-in-btn m-3">
-      <%= link_to "ログイン", "#", class: "btn text-white" %>
+      <%= link_to "ログイン", new_user_session_path, class: "btn text-white" %>
     </div>
   </div>
 </div>
