--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -7,6 +7,9 @@
 @import "users/show";
 @import "users/edit";
 @import "users/index";
+@import "matching/index";
+@import "chat_rooms/show";
+
 
 a {
   text-decoration: none;
