--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
   <%= render "partial/navbar" %>
 
   <div class="swipe">
-    <div class="swipe--starus">
+    <div class="swipe--status">
       <i class="fa fa-times"></i>
       <i class="fa fa-heart"></i>
     </div>
@@ -28,4 +28,5 @@
       <button id="like"><i class="fas fa-heart fa-2x"></i></button>
     </div>
   </div>
+
 </div>
