--- a/app/javascript/stylesheets/users/index.scss
+++ b/app/javascript/stylesheets/users/index.scss
@@ -42,13 +42,14 @@
     top: 50%;
     margin-top: -30px;
     z-index: 2;
+    width: 100%;
     text-align: center;
     pointer-events: none;
     svg {
       font-size: 100px;
       opacity: 0;
       transform: scale(0.3);
-      transition: all -0.2s ease-in-out;
+      transition: all 0.2s ease-in-out;
       position: absolute;
       margin: -40px 0 0 -40px;
       width: 100px;
@@ -74,7 +75,7 @@
     display: inline-block;
     width: 90vw;
     max-width: 340px;
-    background: #ffffff;
+    background: #FFFFFF;
     border-radius: 8px;
     overflow: hidden;
     position: absolute;
@@ -103,7 +104,7 @@
       line-height: 60px;
       width: 60px;
       border: 0;
-      background: #ffffff;
+      background: #FFFFFF;
       display: inline-block;
       margin: 0 8px;
       &:focus {
@@ -119,27 +120,25 @@
     opacity: 0.7;
     transform: scale(1);
   }
-  .moving {
-    .swipe--card {
-      transition: none;
-      cursor: -webkit-grabbing;
-      cursor: -moz-grabbing;
-      cursor: grabbing;
-    }
+  .moving .swipe--card {
+    transition: none;
+    cursor: -webkit-grabbing;
+    cursor: -moz-grabbing;
+    cursor: grabbing;
   }
 }
 
 .fa-heart {
-  color: #fface4;
+  color: #FFACE4;
 }
 
 .fa-times {
-  color: #cdd6dd;
+  color: #CDD6DD;
 }
 
-@media (min-width: 425px) {
+@media (min-width: 415px) {
   .user-index-page {
-    border: 1px solid tgba(0, 0, 0, 0.125);
+    border: 1px solid rgba(0, 0, 0, 0.125);
     border-radius: 0.25rem;
     margin: 8px auto;
   }
@@ -148,5 +147,15 @@
 @media (min-width: 414px) {
   .swipe {
     height: 640px;
+  }
+}
+
+.no-user {
+  display: none;
+  flex-direction: colmun;
+  justify-content: center;
+  align-items: center;
+  &.is-active {
+    display: flex;
   }
 }
